--- a/AuthService/.env
+++ b/AuthService/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://localhost:27017/mydb
+MONGODB_URI=mongodb+srv://hainguyendoanngoc:haipro456@cluster0.x64cw.mongodb.net/CustomerManagement?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=yourjwtsecret
