--- a/paymentservice/package.json
+++ b/paymentservice/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "orderservice",
+  "name": "paymentservice",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "@prisma/client": "^6.4.1",
+    "@payos/node": "^1.0.10",
     "amqplib": "^0.10.7",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.7",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "prisma": "^6.4.1",
     "pug": "2.0.0-beta11"
   }
 }
