--- a/AuthService/.env
+++ b/AuthService/.env
@@ -1,2 +1,5 @@
 MONGODB_URI=mongodb+srv://hainguyendoanngoc:haipro456@cluster0.x64cw.mongodb.net/CustomerManagement?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=yourjwtsecret
+CLOUDINARY_CLOUD_NAME=dioycsndv
+CLOUDINARY_API_KEY=386921452882728
+CLOUDINARY_API_SECRET=dRrvRJBEIJux55tAGjOYrJ4n_KY
