--- a/AuthService/package.json
+++ b/AuthService/package.json
@@ -7,15 +7,17 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.2",
     "pug": "2.0.0-beta11"
   }
 }
