--- a/ItemService/package.json
+++ b/ItemService/package.json
@@ -7,13 +7,16 @@
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "axios": "^1.9.0",
+    "cloudinary": "^2.6.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.2",
     "prisma": "^6.4.1",
     "pug": "2.0.0-beta11"
   }
