--- a/CartService/package.json
+++ b/CartService/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "itemservice",
+  "name": "cartservice",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "@prisma/client": "^6.4.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^16.4.7",
+    "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "p-retry": "^6.2.1",
-    "prisma": "^6.4.1",
-    "pug": "2.0.0-beta11"
+    "redis": "^5.0.1"
   }
 }
